--- a/components/topBar/index.html
+++ b/components/topBar/index.html
@@ -50,7 +50,7 @@
               {{/if}}
             </a>
             <ul class="dropdown-menu" role="menu">
-              <view is="navLink" url="/coca/account"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Acount</view>
+              <view is="navLink" url="/coca/account"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Account</view>
               <view is="navLink" url="/auth/logout"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</view>
             </ul>
           </li>
